Use ubuntu 22.04 build